css color experiments

--- a/app/assets/stylesheets/tenon/layout/record-list.scss
+++ b/app/assets/stylesheets/tenon/layout/record-list.scss
@@ -1,12 +1,11 @@
 .record-list {
 }
 
-
 .infinite-loader {
   @include font-size-h3;
   display: none;
   text-align: center;
-  color: $dark-grey;
+  color: $infinite-loader-color;
 
   &.visible {
     display: block;
