--- a/app/assets/stylesheets/tenon/ui/btn.scss
+++ b/app/assets/stylesheets/tenon/ui/btn.scss
@@ -1,38 +1,2 @@
-.btn {
-  @include default-transition;
-  @include z-depth-1;
-  @include font-size-smaller;
-  display: inline-block;
-  position: relative;
-  border-radius: $default-border-radius;
-  border: 0;
-  padding: 0 $default-spacing;
-  height: $btn-height;
-  line-height: $btn-height;
-  text-align: center;
-  text-transform: uppercase;
-  color: $button-primary-fg-color;
-  background: $button-primary-bg-color;
-
-  &.btn-flat,
-  &.btn-flat:hover {
-    @include z-depth-0;
-  }
-
-  &.btn-comp {
-    background: $button-comp-bg-color;
-    color: $button-comp-fg-color;
-  }
-
-  &.btn-block {
-    display: block;
-    width: 100%;
-    margin-bottom: $default-spacing / 3;
-  }
-
-  &:hover {
-    @include z-depth-1-half;
-    text-decoration: none;
-  }
-
-}
+@import "./btns/default.scss";
+@import "./btns/floating.scss";
