--- a/app/assets/stylesheets/tenon/variables/colors/named.scss
+++ b/app/assets/stylesheets/tenon/variables/colors/named.scss
@@ -1,21 +1,18 @@
 // Named colors
 $black: #555555;
-$grey: #ababab;
 $white: #ffffff;
+$grey: #ababab;
 $primary-color: #36a0e0;
 $secondary-color: #ff6f39;
 $accent-color: #0aff90;
 $required-color: #d0021b;
 
-@include generate_color_helpers("black", $black);
 @include generate_color_helpers("grey", $grey);
-@include generate_color_helpers("white", $white);
 @include generate_color_helpers("primary", $primary-color);
 @include generate_color_helpers("secondary", $secondary-color);
 @include generate_color_helpers("accent", $accent-color);
 
 // Notification colors
-$alert-color: #d0021b;
-$error-color: #d0021b;
-$success-color: #d0021b;
-$warning-color: #d0021b;
+$error-color: #d2322d;
+$success-color: #47a447;
+$warning-color: #ed9c28;
