beginnings of moving toolbar to util nav

--- a/app/assets/stylesheets/tenon/layout/main.scss
+++ b/app/assets/stylesheets/tenon/layout/main.scss
@@ -7,7 +7,7 @@ main {
   width: 90%;
   max-width: 1170px;
   margin: 0 auto $default-spacing*2;
-  padding-top: $util-nav-height + $toolbar-height;
+  padding-top: $util-nav-height + $default-spacing;
 
   .btn-floating {
     position: fixed;
