--- a/app/assets/stylesheets/tenon/variables/sizes.scss
+++ b/app/assets/stylesheets/tenon/variables/sizes.scss
@@ -6,10 +6,11 @@ $default-spacing: 30px;
 $dot-size: 6px;
 $dropdown-item-height: 40px;
 $icon-width: $default-spacing / 3 + 22px;
-$main-nav-width: 244px;
+$main-nav-width: 260px;
+$main-nav-logo-height: 30px;
 $tool-toggle-size: 32px;
 $toolbar-height: 70px;
-$util-nav-height: 50px;
+$util-nav-height: 60px;
 
 // Typography
 $h1-size: 44;
