--- a/app/assets/stylesheets/tenon/variables/z-index.scss
+++ b/app/assets/stylesheets/tenon/variables/z-index.scss
@@ -1,10 +1,11 @@
 // layout:
-$z-layout-util-nav: 30;
+$z-layout-util-nav: 20;
 $z-layout-main-nav: 10;
-$z-layout-toolbar: 20;
+$z-layout-toolbar: 30;
 
 // ui:
-$z-flash-message: 40;
+$z-flash-message: 50;
+$z-nav-toggle: 40;
 $z-kebab-dropdown: 10;
 $z-btn-floating: 10;
 $z-panel-open: 10;
