--- a/app/assets/stylesheets/tenon/layout/util-nav.scss
+++ b/app/assets/stylesheets/tenon/layout/util-nav.scss
@@ -1,28 +1,61 @@
 .util-nav {
+  @include z-depth-1;
+  line-height: $util-nav-height;
   position: fixed;
   z-index: $z-layout-util-nav;
   top: 0;
   right: 0;
   left: 0;
   height: $util-nav-height;
-  padding: 0 $default-spacing;
   color: $util-nav-fg-color;
   background-color: $util-nav-bg-color;
 
   a {
     color: $util-nav-fg-color;
   }
+}
 
-  .toggle-main-nav {
-    @include default-transition;
-    float: left;
-    height: $util-nav-height;
-    padding: 9px 0;
-  }
+.toggle-main-nav {
+  @include default-transition;
+  position: absolute;
+  z-index: $z-nav-toggle;
+  top: $default-spacing/2;
+  left: $default-spacing;
+  width: $default-spacing;
+  height: $util-nav-height;
+}
 
-  .brand-logo {
+.util-nav-context {
+  display: block;
+  float: left;
+  overflow: hidden;
+  box-sizing: border-box;
+  width: $main-nav-width;
+  margin: 0 0 0 $default-spacing*2.5;
+  p {
+    @include truncate;
     display: inline-block;
-    margin-left: $default-spacing;
-    padding-top: 9px;
+    width: $main-nav-width - $default-spacing*2;
   }
+}
+
+.util-nav-account {
+  position: absolute;
+  top: 10px;
+  right: $default-spacing;
+}
+
+.util-nav-avatar {
+  img {
+    width: $util-nav-height - 20px;
+    height: $util-nav-height - 20px;
+    border-radius: 50%;
+  }
+}
+
+.util-nav-content {
+  @include calc(width, "100% - #{$main-nav-width $util-nav-height + $default-spacing}");
+  position: relative;
+  height: $util-nav-height;
+  margin-left: $main-nav-width;
 }
