--- a/app/views/tenon/item_assets/new.html.haml
+++ b/app/views/tenon/item_assets/new.html.haml
@@ -8,7 +8,7 @@
         .fields.full
           .form-group
             .browse-button-holder.solo
-              .fileupload.btn.btn-comp.browse
+              .fileupload.btn.btn-secondary.browse
                 %span#choose-files Browse
                 %input{ :type => 'file', :class => 'upload', multiple: defined?(multiple) && multiple, style: 'width: 100%;', name: 'asset[attachment]' }
         .spacer
