--- a/app/assets/stylesheets/tenon/variables/z-index.scss
+++ b/app/assets/stylesheets/tenon/variables/z-index.scss
@@ -5,6 +5,7 @@ $z-layout-toolbar: 30;
 
 // ui:
 $z-flash-message: 50;
+$z-account: 40;
 $z-nav-toggle: 40;
 $z-kebab-dropdown: 10;
 $z-btn-floating: 10;
