--- a/app/views/tenon/shared/_util_nav.html.haml
+++ b/app/views/tenon/shared/_util_nav.html.haml
@@ -1,21 +1,22 @@
 = render 'tenon/shared/burger'
+
+.account
+  = link_to '#!', class: 'account-avatar action dropdown-button', data: { activates: 'current-user-dropdown'} do
+    = image_tag('tenon/icon-57x57.png')
+
+  %ul.dropdown-content#current-user-dropdown
+    %li
+      = link_to '#' do
+        %i.icon.ion-person
+        Account
+    %li
+      = link_to '#' do
+        %i.icon.ion-ios-paw
+        Something
+
 %nav.util-nav
   .util-nav-context
     %p= @context_title
 
   .util-nav-content
     = yield :util_nav
-
-  .util-nav-account
-    = link_to '#!', class: 'util-nav-avatar action dropdown-button', data: { activates: 'current-user-dropdown'} do
-      = image_tag('tenon/icon-57x57.png')
-
-    %ul.dropdown-content#current-user-dropdown
-      %li
-        = link_to '#' do
-          %i.icon.ion-person
-          Account
-      %li
-        = link_to '#' do
-          %i.icon.ion-ios-paw
-          Something
