--- a/app/assets/stylesheets/tenon/variables/z-index.scss
+++ b/app/assets/stylesheets/tenon/variables/z-index.scss
@@ -4,9 +4,11 @@ $z-layout-main-nav: 10;
 $z-layout-toolbar: 30;
 
 // ui:
-$z-flash-message: 50;
-$z-account: 40;
+$z-flash-message: 70;
+$z-account: 60;
 $z-nav-toggle: 40;
 $z-kebab-dropdown: 10;
 $z-btn-floating: 10;
 $z-panel-open: 10;
+$z-quick-search-active: 50;
+$z-quick-search: 10;
