--- a/app/views/tenon/shared/_util_nav.html.haml
+++ b/app/views/tenon/shared/_util_nav.html.haml
@@ -13,6 +13,10 @@
       = link_to '#' do
         %i.icon.ion-ios-paw
         Something
+    %li
+      = link_to '#' do
+        %i.icon.ion-android-exit
+        Logout
 
 %nav.util-nav
   .util-nav-context
